k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiap-hack
  labels:
    name: fiap-hack
