k8s/video-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-processor
  namespace: fiap-hack
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: video-processor
  template:
    metadata:
      labels:
        app: video-processor
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3001"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: video-processor
        image: vavarine/fiap-hack-video-processor:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: http
        resources:
          requests:
            memory: "1Gi"
            cpu: "1000m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        livenessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: video-processor
  namespace: fiap-hack
spec:
  selector:
    app: video-processor
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    name: http
